syntax = "proto3";

option csharp_namespace = "Mammoth.Api";

package schedule;

service ScheduleService {
  rpc Notify (CurrentTrackRequest) returns (CurrentTrackResponse);
}

message CurrentTrackRequest {
  int32 channelId = 1;
  string description = 2;
}

message CurrentTrackResponse {

}
